--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1392,8 +1392,8 @@ body {
   text-align: center;
 }
 .cid-r5IJMsDBkB {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
 .cid-r5IJMsDBkB .mbr-slider .carousel-control {
@@ -1417,11 +1417,10 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #b2ccd2;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
 }
 .cid-r5IJMsDBkB .mbr-gallery-item > div:hover .mbr-gallery-title::before {
   background: transparent !important;
@@ -1447,9 +1446,8 @@ body {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #b2ccd2 !important;
   opacity: 0.7;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
 }
