--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Libre+Franklin:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i);
 
 
 
@@ -21,21 +21,21 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 4.25rem;
 }
 .display-1 > .mbr-iconfont {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: 'Merriweather', serif;
   font-size: 3rem;
 }
 .display-2 > .mbr-iconfont {
   font-size: 4.8rem;
 }
 .display-4 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Merriweather', serif;
   font-size: 1rem;
 }
 .display-4 > .mbr-iconfont {
@@ -49,7 +49,7 @@ body {
   font-size: 2.4rem;
 }
 .display-7 {
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 1rem;
 }
 .display-7 > .mbr-iconfont {
@@ -659,7 +659,7 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'Libre Franklin', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 1rem;
   line-height: 1.43;
   min-height: 3.5em;
@@ -1377,8 +1377,405 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
+.cid-r5SDIvv0HY .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-r5SDIvv0HY .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-r5SDIvv0HY a {
+  font-style: normal;
+}
+.cid-r5SDIvv0HY .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-r5SDIvv0HY .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-r5SDIvv0HY .nav-item:focus,
+.cid-r5SDIvv0HY .nav-link:focus {
+  outline: none;
+}
+.cid-r5SDIvv0HY .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-r5SDIvv0HY .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-r5SDIvv0HY .menu-logo {
+  margin-right: auto;
+}
+.cid-r5SDIvv0HY .menu-logo .navbar-brand {
+  display: -webkit-flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-r5SDIvv0HY .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-r5SDIvv0HY .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-r5SDIvv0HY .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-r5SDIvv0HY .menu-logo .navbar-brand .navbar-logo img {
+  display: -webkit-flex;
+}
+.cid-r5SDIvv0HY .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-r5SDIvv0HY .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-r5SDIvv0HY .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-r5SDIvv0HY .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-r5SDIvv0HY .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-r5SDIvv0HY .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-r5SDIvv0HY .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-r5SDIvv0HY .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-r5SDIvv0HY .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-r5SDIvv0HY .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-r5SDIvv0HY .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-r5SDIvv0HY .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-r5SDIvv0HY .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-r5SDIvv0HY .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-r5SDIvv0HY .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-r5SDIvv0HY .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-r5SDIvv0HY .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-r5SDIvv0HY button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-r5SDIvv0HY button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-r5SDIvv0HY button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #333333;
+}
+.cid-r5SDIvv0HY button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-r5SDIvv0HY button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-r5SDIvv0HY button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-r5SDIvv0HY button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-r5SDIvv0HY nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-r5SDIvv0HY nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-r5SDIvv0HY nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-r5SDIvv0HY nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-r5SDIvv0HY .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-r5SDIvv0HY .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-r5SDIvv0HY .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.collapsing,
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-r5SDIvv0HY .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-r5SDIvv0HY .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-r5SDIvv0HY .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-r5SDIvv0HY .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-r5SDIvv0HY .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-r5SDIvv0HY .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-r5SDIvv0HY .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-r5SDIvv0HY .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-r5SDIvv0HY.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-r5SDIvv0HY img {
+    height: 3.8rem !important;
+  }
+  .cid-r5SDIvv0HY .btn {
+    display: -webkit-flex;
+  }
+  .cid-r5SDIvv0HY button.navbar-toggler {
+    display: block;
+  }
+  .cid-r5SDIvv0HY .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-r5SDIvv0HY .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-r5SDIvv0HY .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-r5SDIvv0HY .navbar-collapse.collapsing,
+  .cid-r5SDIvv0HY .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-r5SDIvv0HY .navbar-collapse.collapsing .navbar-nav,
+  .cid-r5SDIvv0HY .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-r5SDIvv0HY .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-r5SDIvv0HY .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-r5SDIvv0HY .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-r5SDIvv0HY .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-r5SDIvv0HY .navbar-collapse.collapsing .navbar-buttons,
+  .cid-r5SDIvv0HY .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-r5SDIvv0HY .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-r5SDIvv0HY .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-r5SDIvv0HY .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-r5SDIvv0HY .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-r5SDIvv0HY .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-r5SDIvv0HY .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-r5SDIvv0HY .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-r5SDIvv0HY .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-r5SDIvv0HY .nav-link:hover,
+.cid-r5SDIvv0HY .dropdown-item:hover {
+  color: #767676 !important;
+}
 .cid-r5du0nJP3n {
-  background-image: url("../../../assets/images/jumbotron.jpg");
+  background-color: #b2ccd2;
 }
 .cid-r5dur9LoPj {
   padding-top: 30px;
@@ -1456,6 +1853,177 @@ body {
   z-index: 2;
 }
 .cid-r5IJMsDBkB .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #b2ccd2 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
+.cid-r5SCUxAPJk {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-r5SCUxAPJk .title {
+  margin-bottom: 2rem;
+}
+.cid-r5SCUxAPJk .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r5SCUxAPJk a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-r5SCUxAPJk a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-r5SCUxAPJk .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-r5SCUxAPJk .input-group-btn {
+  display: block;
+  text-align: center;
+}
+.cid-r7cfahRLex {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #b2ccd2;
+}
+.cid-r7cfahRLex H1 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-r7cfahRLex P {
+  text-align: center;
+}
+.cid-r7cfaNVJXx {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-r7cfaNVJXx .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-r7cfaNVJXx .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-r7cfaNVJXx .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-r7cfaNVJXx .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-r7cfaNVJXx .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #b2ccd2;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-r7cfaNVJXx .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-r7cfaNVJXx .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-r7cfaNVJXx .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-r7cfaNVJXx .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #b2ccd2 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+}
+.cid-r7cfoFzZs1 {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #b2ccd2;
+}
+.cid-r7cfoFzZs1 H1 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-r7cfoFzZs1 P {
+  text-align: center;
+}
+.cid-r7cfp1TQqM {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-r7cfp1TQqM .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-r7cfp1TQqM .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-r7cfp1TQqM .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-r7cfp1TQqM .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-r7cfp1TQqM .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #b2ccd2;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+}
+.cid-r7cfp1TQqM .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-r7cfp1TQqM .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-r7cfp1TQqM .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-r7cfp1TQqM .mbr-gallery-title:before {
   content: " ";
   width: 100%;
   height: 100%;
