--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
 
 
 
@@ -21,7 +21,7 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Merriweather', serif;
   font-size: 4.25rem;
 }
 .display-1 > .mbr-iconfont {
@@ -42,7 +42,7 @@ body {
   font-size: 1.6rem;
 }
 .display-5 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Merriweather', serif;
   font-size: 1.5rem;
 }
 .display-5 > .mbr-iconfont {
@@ -4020,4 +4020,24 @@ body {
 .cid-r7chYrY7HS .nav-link:hover,
 .cid-r7chYrY7HS .dropdown-item:hover {
   color: #767676 !important;
+}
+.cid-r7cs0lKEEo {
+  padding-top: 105px;
+  padding-bottom: 90px;
+  background-color: #b2ccd2;
+}
+@media (min-width: 992px) {
+  .cid-r7cs0lKEEo .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-r7cs0lKEEo .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-r7cs0lKEEo .mbr-text {
+    text-align: center;
+  }
 }
