--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6733,3 +6733,12 @@ body {
     width: 100% !important;
   }
 }
+.cid-rhHUobYOGw {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rhHUobYOGw .mbr-text,
+.cid-rhHUobYOGw blockquote {
+  color: #767676;
+}
