--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -677,6 +677,7 @@ a:hover {
   right: 0;
   top: 0;
   z-index: 0;
+  pointer-events: none;
 }
 blockquote {
   font-style: italic;
@@ -1369,6 +1370,11 @@ body {
 }
 .dropup .dropdown-toggle::after {
   display: none;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .card-wrapper {
+    flex: auto!important;
+  }
 }
 .cid-r5SDIvv0HY .navbar {
   background: #ffffff;
@@ -6741,4 +6747,7 @@ body {
 .cid-rhHUobYOGw .mbr-text,
 .cid-rhHUobYOGw blockquote {
   color: #767676;
+}
+.cid-rhHUobYOGw .mbr-text {
+  color: #232323;
 }
