--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -36,10 +36,10 @@ body {
 }
 .display-5 {
   font-family: 'Arial';
-  font-size: 2.4rem;
+  font-size: 2.5rem;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 3.84rem;
+  font-size: 4rem;
 }
 .display-7 {
   font-family: 'Arial';
@@ -70,9 +70,9 @@ body {
     line-height: calc( 1.4 * (0.93rem + (0.8 - 0.93) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.92rem;
-    font-size: calc( 1.49rem + (2.4 - 1.49) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.49rem + (2.4 - 1.49) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2rem;
+    font-size: calc( 1.525rem + (2.5 - 1.525) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.525rem + (2.5 - 1.525) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -1774,10 +1774,11 @@ body {
   color: #767676 !important;
 }
 .cid-r5du0nJP3n {
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/1-1.jpg");
 }
 .cid-r5du0nJP3n H1 {
   color: #232323;
+  text-align: left;
 }
 .cid-r7chUicJrF .navbar {
   background: #ffffff;
